--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-fast-marquee": "^1.6.5",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.4"
   },
