--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reown/appkit": "^1.6.0",
     "@reown/appkit-adapter-wagmi": "^1.6.0",
     "@tanstack/react-query": "^5.62.7",
+    "@web3icons/react": "^3.14.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
     "motion": "^11.15.0",
@@ -44,7 +45,8 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.0.2",
-      "@types/react-dom": "19.0.2"
+      "@types/react-dom": "19.0.2",
+      "lit": "3.1.0"
     }
   }
 }
