--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.460.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
+    "pino-pretty": "^13.0.0",
+    "process": "^0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
