--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pino-pretty": "^13.0.0",
     "process": "^0.11.10",
     "react": "19.0.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.4.1",
